--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,21 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#################
+## mythebrig
+#################
+*
+!conf
+!conf/*
+conf/jail_start
+conf/bin/ftp
+conf/ports
+conf/ports/*
+conf/sbin
+conf/sbin/*
+conf/libexec
+conf/libexec/*
+conf/db
+conf/db/*
+
